data/ and output/plots/ folders will not be ignored but only the files they contain

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,9 @@ vignettes/*.pdf
 *.Rproj
 
 # Data folder
-data/
+data/*.csv
 
 # Figure output folder
-output/plots/
+output/plots/*.pdf
+output/plots/*.png
 
