changed way of adding shapefile extentions to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,16 @@ vignettes/*.pdf
 *.Rproj
 # Data folder
 data/*.csv
-data/*.dbf
-data/*.prj
-data/*.qpj
-data/*.shp
-data/*.shx
+data/med_area_melted_final/*.dbf
+data/med_area_melted_final/*.prj
+data/med_area_melted_final/*.qpj
+data/med_area_melted_final/*.shp
+data/med_area_melted_final/*.shx
+data/med_countries_islands/*.dbf
+data/med_countries_islands/*.prj
+data/med_countries_islands/*.qpj
+data/med_countries_islands/*.shp
+data/med_countries_islands/*.shx
 # Figure output folder
 output/plots/*.pdf
 output/plots/*.png
